--- a/Source/Engine/Core/Core.vcxproj.filters
+++ b/Source/Engine/Core/Core.vcxproj.filters
@@ -5,6 +5,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Source\Math">
+      <UniqueIdentifier>{cf73c689-a2f1-445c-af42-2c678ad5b406}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Random.h">
@@ -19,23 +22,26 @@
     <ClInclude Include="Time.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Vector2.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="Core.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="Transform.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="MathUtils.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="Color.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="Logger.h">
       <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Vector3.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Color.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\MathUtils.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Transform.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Vector2.h">
+      <Filter>Source\Math</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
