--- a/Source/Game/BeThompson Game/BeThompson Game.vcxproj.filters
+++ b/Source/Game/BeThompson Game/BeThompson Game.vcxproj.filters
@@ -8,6 +8,9 @@
     <Filter Include="Source\Enemies">
       <UniqueIdentifier>{4824fadd-beed-48a5-8e38-032204467bed}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resources">
+      <UniqueIdentifier>{009a318e-b085-4e7b-baee-79af89ba8adc}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -16,7 +19,7 @@
     <ClCompile Include="Player.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="PewComponent.cpp">
+    <ClCompile Include="Weapon.cpp">
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="PewGame.cpp">
@@ -39,7 +42,7 @@
     <ClInclude Include="Player.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="PewComponent.h">
+    <ClInclude Include="Weapon.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="PewGame.h">
@@ -57,5 +60,10 @@
     <ClInclude Include="MultiShotEnemy.h">
       <Filter>Source\Enemies</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\Build\Assets\Scene.json">
+      <Filter>Resources</Filter>
+    </Text>
   </ItemGroup>
 </Project>
