--- a/Source/Engine/Pyshics/Pyshics.vcxproj
+++ b/Source/Engine/Pyshics/Pyshics.vcxproj
@@ -19,10 +19,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PsyhicsSystem.cpp" />
+    <ClCompile Include="PhysicsSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="PsyhicsSystem.h" />
+    <ClInclude Include="PhysicsSystem.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
