Tilemap and Animations

--- a/Source/Game/Platform Game/Platform Game.vcxproj.filters
+++ b/Source/Game/Platform Game/Platform Game.vcxproj.filters
@@ -17,14 +17,29 @@
     <ClCompile Include="PlatformGame.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlatformGame.h">
       <Filter>Source</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\Build\Assets\Platformer\Scenes\PlatformScene.json">
+      <Filter>Resources</Filter>
+    </None>
+    <None Include="..\..\..\Build\Assets\Platformer\Scenes\tilemap.json">
       <Filter>Resources</Filter>
     </None>
   </ItemGroup>
