--- a/Source/Game/Platform Game/Platform Game.vcxproj
+++ b/Source/Game/Platform Game/Platform Game.vcxproj
@@ -168,6 +168,7 @@
   <ItemGroup>
     <None Include="..\..\..\Build\Assets\Platformer\Scenes\PlatformScene.json" />
     <None Include="..\..\..\Build\Assets\Platformer\Scenes\tilemap.json" />
+    <None Include="..\..\..\Build\Assets\Platformer\Scenes\title.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
