--- a/Source/Game/Platform Game/Platform Game.vcxproj.filters
+++ b/Source/Game/Platform Game/Platform Game.vcxproj.filters
@@ -42,5 +42,8 @@
     <None Include="..\..\..\Build\Assets\Platformer\Scenes\tilemap.json">
       <Filter>Resources</Filter>
     </None>
+    <None Include="..\..\..\Build\Assets\Platformer\Scenes\title.json">
+      <Filter>Resources</Filter>
+    </None>
   </ItemGroup>
 </Project>
